added dragging to images

--- a/main.css
+++ b/main.css
@@ -199,6 +199,9 @@
       /* background: yellow !important; */
     }
     img {
+      /* -webkit-user-drag: none; */
+      /* user-select: none; */
+      cursor: pointer;
       background: transparent;
       width: 30px;
     }
